--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html>
   <head>
-    <title>Prashant Farkya</title>
+    <title>Prashant <h1>Farkya</h1></title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-    <h1>Prashant Farkya</h1>
+  <div>
+    <h1 class="heading">Prashant Farkya</h1>
     <p>Project Engineer in Wipro<br>Basic skill set is C.<br>I have one year expirience in C.<br>Now Want to a Full Stack Developer</p>
     <h3>Basic Detail</h3>
     <p><b>Company:</b>Wipro<br><b>Age:</b>23<br><b>Skill Set:</b>C,C++,Java<br><b>Native Place:</b>Mandsaur<br></p>
+  </div>
   </body>
 </html>
