enhancing the page

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <html>
   <head>
-    <title>Prashant <h1>Farkya</h1></title>
+    <title>Prashant Farkya</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
   <div>
     <h1 class="heading">Prashant Farkya</h1>
+    <div class="blockcontent">
     <p>Project Engineer in Wipro<br>Basic skill set is C.<br>I have one year expirience in C.<br>Now Want to a Full Stack Developer</p>
+    </div>
+    <div class="blockcontent">
     <h3>Basic Detail</h3>
     <p><b>Company:</b>Wipro<br><b>Age:</b>23<br><b>Skill Set:</b>C,C++,Java<br><b>Native Place:</b>Mandsaur<br></p>
+    </div>
   </div>
   </body>
 </html>
