--- a/index.html
+++ b/index.html
@@ -4,15 +4,26 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
+  <!-->
+  Page Container
+  -->
+  <pageback>
   <div>
+    <!-->heading-->
     <h1 class="heading">Prashant Farkya</h1>
-    <div class="blockcontent">
+    <!-->containers i.e. Sections-->
+    <cont class="blockcontent">
+    <div id="aboutme">
+    <h3>About Me</h3>
     <p>Project Engineer in Wipro<br>Basic skill set is C.<br>I have one year expirience in C.<br>Now Want to a Full Stack Developer</p>
     </div>
-    <div class="blockcontent">
+    <img id="aboutme" src="img/aboutme.jpg">
+    </cont>
+    <cont class="blockcontent">
     <h3>Basic Detail</h3>
     <p><b>Company:</b>Wipro<br><b>Age:</b>23<br><b>Skill Set:</b>C,C++,Java<br><b>Native Place:</b>Mandsaur<br></p>
-    </div>
+    </cont>
   </div>
+  </pageback>
   </body>
 </html>
