website fragment part

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-  <!-->
+  <!--
   Page Container
   -->
   <pageback>
   <div>
-    <!-->heading-->
+    <!--heading-->
     <h1 class="heading">Prashant Farkya</h1>
-    <!-->containers i.e. Sections-->
+    <!--containers i.e. Sections-->
     <cont class="blockcontent">
     <div id="aboutme">
     <h3>About Me</h3>
@@ -24,6 +24,8 @@
     <p><b>Company:</b>Wipro<br><b>Age:</b>23<br><b>Skill Set:</b>C,C++,Java<br><b>Native Place:</b>Mandsaur<br></p>
     </cont>
   </div>
+  <footer></footer>
   </pageback>
   </body>
 </html>
+
