--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
     <h3>Basic Detail</h3>
     <p><b>Company:</b>Wipro<br><b>Age:</b>23<br><b>Skill Set:</b>C,C++,Java<br><b>Native Place:</b>Mandsaur<br></p>
     </cont>
+    <cont class="blockcontent"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium maxime fugit ratione assumenda recusandae? Dolor consectetur non eos, possimus dignissimos necessitatibus provident omnis error numquam, quos deserunt inventore soluta pariatur.</p>
+    </cont>
+        <cont class="blockcontent"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium maxime fugit ratione assumenda recusandae? Dolor consectetur non eos, possimus dignissimos necessitatibus provident omnis error numquam, quos deserunt inventore soluta pariatur.</p>
+    </cont>
+        <cont class="blockcontent"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium maxime fugit ratione assumenda recusandae? Dolor consectetur non eos, possimus dignissimos necessitatibus provident omnis error numquam, quos deserunt inventore soluta pariatur.</p>
+    </cont>
+        <cont class="blockcontent"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium maxime fugit ratione assumenda recusandae? Dolor consectetur non eos, possimus dignissimos necessitatibus provident omnis error numquam, quos deserunt inventore soluta pariatur.</p>
+    </cont>
+        <cont class="blockcontent"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium maxime fugit ratione assumenda recusandae? Dolor consectetur non eos, possimus dignissimos necessitatibus provident omnis error numquam, quos deserunt inventore soluta pariatur.</p>
+    </cont>
+        <cont class="blockcontent"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium maxime fugit ratione assumenda recusandae? Dolor consectetur non eos, possimus dignissimos necessitatibus provident omnis error numquam, quos deserunt inventore soluta pariatur.</p>
+    </cont>
   </div>
   <footer></footer>
   </pageback>
